Fix HBW positioning and spacing - <1120

--- a/boplatsWork.css
+++ b/boplatsWork.css
@@ -2,7 +2,7 @@
 .howBoplatsWorks{
     display:flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     padding-right: 30px;
     padding-left: 30px;
     margin-bottom: 200px;
